@@ -18,6 +18,29 @@
  * Author: Sebastien Vincent <vincent@clarinet.u-strasbg.fr>
  */
 
+// Part of the Ipv6Address::Print function has been adapted from inet_ntop6 Linux function.
+// See http://www.net-snmp.org/dev/agent/inet__ntop_8c_source.html
+// Author: Paul Vixie, 1996.
+// The inet_ntop6 function was under the copyright below, which is
+// compatible with GPLv2, see http://www.gnu.org/licenses/license-list.html#GPLCompatibleLicenses.
+
+/* Copyright (c) 1996 by Internet Software Consortium.
+ *
+ * Permission to use, copy, modify, and distribute this software for any
+ * purpose with or without fee is hereby granted, provided that the above
+ * copyright notice and this permission notice appear in all copies.
+ *
+ * THE SOFTWARE IS PROVIDED "AS IS" AND INTERNET SOFTWARE CONSORTIUM DISCLAIMS
+ * ALL WARRANTIES WITH REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES
+ * OF MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL INTERNET SOFTWARE
+ * CONSORTIUM BE LIABLE FOR ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL
+ * DAMAGES OR ANY DAMAGES WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR
+ * PROFITS, WHETHER IN AN ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS
+ * ACTION, ARISING OUT OF OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS
+ * SOFTWARE.
+ */
+
+
 #include <iomanip>
 #include <memory.h>
 
@@ -478,23 +501,96 @@ Ipv6Address Ipv6Address::MakeSolicitedAddress (Ipv6Address addr)
 void Ipv6Address::Print (std::ostream& os) const
 {
   NS_LOG_FUNCTION (this << &os);
-  os << std::hex << std::setw (2) << std::setfill ('0') << (unsigned int) m_address[0]
-     << std::hex << std::setw (2) << std::setfill ('0') << (unsigned int) m_address[1] << ":"
-     << std::hex << std::setw (2) << std::setfill ('0') << (unsigned int) m_address[2]
-     << std::hex << std::setw (2) << std::setfill ('0') << (unsigned int) m_address[3] << ":"
-     << std::hex << std::setw (2) << std::setfill ('0') << (unsigned int) m_address[4]
-     << std::hex << std::setw (2) << std::setfill ('0') << (unsigned int) m_address[5] << ":"
-     << std::hex << std::setw (2) << std::setfill ('0') << (unsigned int) m_address[6]
-     << std::hex << std::setw (2) << std::setfill ('0') << (unsigned int) m_address[7] << ":"
-     << std::hex << std::setw (2) << std::setfill ('0') << (unsigned int) m_address[8]
-     << std::hex << std::setw (2) << std::setfill ('0') << (unsigned int) m_address[9] << ":"
-     << std::hex << std::setw (2) << std::setfill ('0') << (unsigned int) m_address[10]
-     << std::hex << std::setw (2) << std::setfill ('0') << (unsigned int) m_address[11] << ":"
-     << std::hex << std::setw (2) << std::setfill ('0') << (unsigned int) m_address[12]
-     << std::hex << std::setw (2) << std::setfill ('0') << (unsigned int) m_address[13] << ":"
-     << std::hex << std::setw (2) << std::setfill ('0') << (unsigned int) m_address[14]
-     << std::hex << std::setw (2) << std::setfill ('0') << (unsigned int) m_address[15]
-     << std::dec << std::setfill (' ');
+
+  // note: part of this function has been adapted from inet_ntop6 Linux function.
+  // See http://www.net-snmp.org/dev/agent/inet__ntop_8c_source.html
+  // Author: Paul Vixie, 1996.
+
+  if (IsIpv4MappedAddress ())
+    {
+      os << "::ffff:"
+         << (unsigned int) m_address[12] << "."
+         << (unsigned int) m_address[13] << "."
+         << (unsigned int) m_address[14] << "."
+         << (unsigned int) m_address[15];
+      return;
+    }
+
+  uint16_t address[8];
+  uint8_t i;
+
+  for (i=0; i<8; i++)
+    {
+      address[i] = (uint16_t(m_address[2*i]) << 8) | uint16_t(m_address[2*i+1]);
+    }
+
+  int8_t bestBase = -1;
+  int8_t bestLen = 0;
+  int8_t curBase = -1;
+  int8_t curLen = 0;
+
+  for (i=0; i<8; i++)
+    {
+      if (address[i] == 0)
+        {
+          if (curBase == -1)
+            {
+              curBase = i;
+              curLen = 1;
+            }
+          else
+            {
+              curLen++;
+            }
+        }
+      else
+        {
+          if (curBase != -1)
+            {
+              if (bestBase == -1 || curLen > bestLen)
+                {
+                  bestBase = curBase;
+                  bestLen = curLen;
+                }
+              curBase = -1;
+            }
+        }
+    }
+  if (curBase != -1)
+    {
+      if (bestBase == -1 || curLen > bestLen)
+        {
+          bestBase = curBase;
+          bestLen = curLen;
+        }
+    }
+  if (bestBase != -1 && bestLen < 2)
+    {
+      bestBase = -1;
+    }
+
+  for (i = 0; i < 8;) {
+      // Are we inside the best run of 0x00's?
+      if (i == bestBase)
+        {
+          os << ':';
+          i += bestLen;
+          continue;
+        }
+      // Are we following an initial run of 0x00s or any real hex?
+      if (i != 0)
+        {
+          os << ':';
+        }
+      os << std::hex << (unsigned int) address[i];
+      i++;
+  }
+  // Was it a trailing run of 0x00's?
+  if (bestBase != -1 && (bestBase + bestLen) == 8)
+    {
+      os << ':';
+    }
+  os << std::dec;
 }
 
 bool Ipv6Address::IsLocalhost () const
@@ -524,7 +620,7 @@ bool Ipv6Address::IsLinkLocalMulticast () const
   return false;
 }
 
-bool Ipv6Address::IsIpv4MappedAddress ()
+bool Ipv6Address::IsIpv4MappedAddress () const
 {
   NS_LOG_FUNCTION (this);
   uint8_t v4MappedPrefix[12] = { 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
@@ -832,22 +928,8 @@ bool Ipv6Prefix::IsMatch (Ipv6Address a, Ipv6Address b) const
 void Ipv6Prefix::Print (std::ostream &os) const
 {
   NS_LOG_FUNCTION (this << &os);
-  os << std::hex << std::setw (2) << std::setfill ('0') << (unsigned int) m_prefix[0]
-  << std::hex << std::setw (2) << std::setfill ('0') << (unsigned int) m_prefix[1] << ":"
-  << std::hex << std::setw (2) << std::setfill ('0') << (unsigned int) m_prefix[2]
-  << std::hex << std::setw (2) << std::setfill ('0') << (unsigned int) m_prefix[3] << ":"
-  << std::hex << std::setw (2) << std::setfill ('0') << (unsigned int) m_prefix[4]
-  << std::hex << std::setw (2) << std::setfill ('0') << (unsigned int) m_prefix[5] << ":"
-  << std::hex << std::setw (2) << std::setfill ('0') << (unsigned int) m_prefix[6]
-  << std::hex << std::setw (2) << std::setfill ('0') << (unsigned int) m_prefix[7] << ":"
-  << std::hex << std::setw (2) << std::setfill ('0') << (unsigned int) m_prefix[8]
-  << std::hex << std::setw (2) << std::setfill ('0') << (unsigned int) m_prefix[9] << ":"
-  << std::hex << std::setw (2) << std::setfill ('0') << (unsigned int) m_prefix[10]
-  << std::hex << std::setw (2) << std::setfill ('0') << (unsigned int) m_prefix[11] << ":"
-  << std::hex << std::setw (2) << std::setfill ('0') << (unsigned int) m_prefix[12]
-  << std::hex << std::setw (2) << std::setfill ('0') << (unsigned int) m_prefix[13] << ":"
-  << std::hex << std::setw (2) << std::setfill ('0') << (unsigned int) m_prefix[14]
-  << std::hex << std::setw (2) << std::setfill ('0') << (unsigned int) m_prefix[15];
+
+  os << "/" << (unsigned int) GetPrefixLength();
 }
 
 Ipv6Prefix Ipv6Prefix::GetLoopback ()
